<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    style="@style/home_screens_background">

    <ImageView
        android:id="@+id/imageLogoSignIn"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dev_quiz_logo" />

    <EditText
        style="@style/input_home_screens_drawable"
        android:id="@+id/userNameInputSignIn"
        android:layout_marginTop="48dp"
        android:drawableStart="@drawable/ic_account"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/stringUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogoSignIn" />

    <EditText
        style="@style/input_home_screens_drawable"
        android:id="@+id/passwordInputSignIn"
        android:layout_marginTop="48dp"
        android:drawableStart="@drawable/ic_lock"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/stringPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameInputSignIn" />

    <Button
        style="@style/button_text_format_transparent_background"
        android:id="@+id/buttonForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/stringButtonForgotPassword"
        android:background="@drawable/ic_button_background_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputSignIn" />

    <Button
        style="@style/main_button_home_screens_text_format"
        android:id="@+id/buttonActivitySignInScreen"
        android:layout_marginTop="60dp"
        android:text="@string/stringButtonSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonForgotPassword" />

    <Button
        style="@style/button_text_format_transparent_background"
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_button_background_transparent"
        android:text="@string/stringButtonSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonActivitySignInScreen" />

</androidx.constraintlayout.widget.ConstraintLayout>