<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    style="@style/home_screens_background">

    <ImageView
        android:id="@+id/imageLogoSignUp"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dev_quiz_logo" />

    <EditText
        style="@style/input_home_screens_drawable"
        android:id="@+id/userNameInputSignUp"
        android:layout_marginTop="48dp"
        android:drawableStart="@drawable/ic_account"
        android:ems="10"
        android:hint="@string/stringUsername"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogoSignUp" />

    <EditText
        style="@style/input_home_screens_drawable"
        android:id="@+id/emailInputSignUp"
        android:layout_marginTop="48dp"
        android:drawableStart="@drawable/ic_email"
        android:ems="10"
        android:hint="@string/stringEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameInputSignUp" />

    <EditText
        style="@style/input_home_screens_drawable"
        android:id="@+id/passwordlInputSignUp"
        android:layout_marginTop="48dp"
        android:drawableStart="@drawable/ic_lock"
        android:ems="10"
        android:hint="@string/stringPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInputSignUp" />

    <Button
        style="@style/main_button_home_screens_text_format"
        android:id="@+id/buttonActivitySignUpScreen"
        android:layout_marginTop="72dp"
        android:text="@string/stringButtonSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordlInputSignUp" />

</androidx.constraintlayout.widget.ConstraintLayout>