<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity"
    style="@style/home_screens_background">

    <ImageView
        android:id="@+id/imageLogoSplash"
        android:layout_width="159dp"
        android:layout_height="159dp"
        android:layout_marginTop="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dev_quiz_logo" />

    <com.agrawalsuneet.dotsloader.loaders.AllianceLoader
        style="@style/progress_bar_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:alliance_animDuration="500"
        app:alliance_distanceMultiplier="4"
        app:alliance_dotsRadius="7dp"
        app:alliance_drawOnlyStroke="true"
        app:alliance_strokeWidth="3dp"
        app:layout_constraintBottom_toTopOf="@+id/stringFrom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogoSplash" />

    <TextView
        style="@style/text_from"
        android:id="@+id/stringFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/stringFrom"
        app:layout_constraintBottom_toTopOf="@+id/stringDeveloperOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/text_developers"
        android:id="@+id/stringDeveloperOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringDeveloperOne"
        app:layout_constraintBottom_toTopOf="@+id/stringDeveloperTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/text_developers"
        android:id="@+id/stringDeveloperTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/stringDeveloperTwo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>