<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpScreen"
    style="@style/initial_background">

    <ImageView
        android:id="@+id/imageIconSignUp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dev_quiz_logo" />

    <EditText
        android:id="@+id/editTextNameSignUp"
        style="@style/input_initial_screens"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_marginTop="48dp"
        android:drawableStart="@drawable/ic_account"
        android:ems="10"
        android:hint="@string/stringUsername"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageIconSignUp" />

    <EditText
        android:id="@+id/editTextEmailSignUp"
        style="@style/input_initial_screens"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_marginTop="48dp"
        android:drawableStart="@drawable/ic_email"
        android:ems="10"
        android:hint="@string/stringEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNameSignUp" />

    <EditText
        android:id="@+id/editTextPasswordSignUp"
        style="@style/input_initial_screens"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_marginTop="48dp"
        android:drawableStart="@drawable/ic_lock"
        android:ems="10"
        android:hint="@string/stringPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailSignUp" />

    <Button
        android:id="@+id/buttonLogin"
        style="@style/text_color_initial_screens"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/ic_button_ripple_effect"
        android:text="@string/stringSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordSignUp" />

</androidx.constraintlayout.widget.ConstraintLayout>